--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-1.webp" alt="">
+                        <img class="img-fluid mb-4" src="img/cooking.webp" alt="icon1" style="width: 90px; height: 90px;">
                         <h4 class="mb-3">Home Style Cooking</h4>
                         <p class="mb-4">Meals prepared daily using traditional home-style recipes, just like food cooked
                             at home.</p>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-2.webp" alt="">
+                        <img class="img-fluid mb-4" src="img/washing-ingredients.webp" alt="icon2" style="width: 90px; height: 90px;">
                         <h4 class="mb-3">Fresh Ingredients</h4>
                         <p class="mb-4">We use handpicked vegetables, quality spices, and fresh ingredients in every
                             meal.</p>
@@ -300,9 +300,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-3.webp" alt="">
+                        <img class="img-fluid mb-4" src="img/health.webp" alt="icon3" style="width: 90px; height: 90px;">
                         <h4 class="mb-3">Hygienic Preparation</h4>
-                        <p class="mb-4">Cooked in a clean kitchen with proper hygiene and safe food handling practices.
+                        <p class="mb-4">Cooked in a clean kitchen with proper hygiene and safe food handling and practices.
                         </p>
                         <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
                     </div>
