dropdown hover fixed

--- a/feature.html
+++ b/feature.html
@@ -66,10 +66,13 @@
       
 
       
+ .dropdown-item:hover{
+            background-color: white;
+            color: #3CB815;
+        }
         .dropdown-item:focus {
             background-color: white;
-            /* highlight */
-            color: #000;
+            color: #3CB815;
         }
 
         /* Popup Wrapper */
