--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
             padding: 12px 20px;
             color: #333;
         }
-
+        .dropdown-item:hover{
+            background-color: white;
+            color: #3CB815;
+        }
         .dropdown-item:focus {
             background-color: white;
-            /* highlight */
-            color: #000;
+            color: #3CB815;
         }
 
         /* Popup Wrapper */
