--- a/breakfast.html
+++ b/breakfast.html
@@ -63,12 +63,14 @@
             color: #333;
         }
 
+         .dropdown-item:hover{
+            background-color: white;
+            color: #3CB815;
+        }
         .dropdown-item:focus {
             background-color: white;
-            /* highlight */
-            color: #000;
+            color: #3CB815;
         }
-
         /* Popup Wrapper */
         .popup-wrapper {
             border-radius: 12px;
