--- a/dinner.html
+++ b/dinner.html
@@ -63,10 +63,13 @@
             color: #333;
         }
 
-       .dropdown-item:focus {
+        .dropdown-item:hover{
             background-color: white;
-            /* highlight */
-            color: #000;
+            color: #3CB815;
+        }
+        .dropdown-item:focus {
+            background-color: white;
+            color: #3CB815;
         }
 
         /* Popup Wrapper */
