--- a/testimonial.html
+++ b/testimonial.html
@@ -72,12 +72,14 @@
     }
 
     
-    .dropdown-item:focus {
-        background-color: white;
-        /* highlight */
-        color: #000;
-    }
-
+     .dropdown-item:hover{
+            background-color: white;
+            color: #3CB815;
+        }
+        .dropdown-item:focus {
+            background-color: white;
+            color: #3CB815;
+        }
     /* Popup Wrapper */
     .popup-wrapper {
         border-radius: 12px;
