about page and feature page updated

--- a/Nutritionfood.html
+++ b/Nutritionfood.html
@@ -102,6 +102,7 @@
 
          .dropdown-item:hover{
             background-color: white;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
             color: #3CB815;
         }
         .dropdown-item:focus {
