--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         }
         .dropdown-item:hover{
             background-color: white;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
             color: #3CB815;
         }
         .dropdown-item:focus {
@@ -265,7 +266,7 @@
                     <p><i class="fa fa-check text-primary me-3"></i>100% Homemade • Hygienic • Freshly Prepared</p>
                     <p><i class="fa fa-check text-primary me-3"></i>Prepared Daily Using Fresh Ingredients</p>
                     <p><i class="fa fa-check text-primary me-3"></i>No Artificial Colors or Preservatives</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5 mt-3" href="">Read More</a>
+                   
                 </div>
             </div>
         </div>
@@ -288,7 +289,7 @@
                         <h4 class="mb-3">Home Style Cooking</h4>
                         <p class="mb-4">Meals prepared daily using traditional home-style recipes, just like food cooked
                             at home.</p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="feature.html#feature1">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -297,7 +298,7 @@
                         <h4 class="mb-3">Fresh Ingredients</h4>
                         <p class="mb-4">We use handpicked vegetables, quality spices, and fresh ingredients in every
                             meal.</p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="feature.html#feature2">Read More</a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -306,7 +307,7 @@
                         <h4 class="mb-3">Hygienic Preparation</h4>
                         <p class="mb-4">Cooked in a clean kitchen with proper hygiene and safe food handling and practices.
                         </p>
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="">Read More</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill" href="feature.html#feature3">Read More</a>
                     </div>
                 </div>
             </div>
@@ -471,7 +472,7 @@
                             </div>
                         </div>
                         <div class="col-12 text-center mt-3 wow fadeInUp" data-wow-delay="0.1s">
-                            <a class="btn btn-primary rounded-pill py-3 px-5" href="">Browse More Products</a>
+                            <a class="btn btn-primary rounded-pill py-3 px-5" href="product.html">Browse More Products</a>
                         </div>
                     </div>
                 </div>
