dropdown hover fixed and about image changed on index.html

--- a/faq.html
+++ b/faq.html
@@ -69,10 +69,14 @@
             color: #333;
         }
 
-         .dropdown-item:focus {
+          .dropdown-item:hover{
             background-color: white;
-            /* highlight */
-            color: #000;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+            color: #3CB815;
+        }
+        .dropdown-item:focus {
+            background-color: white;
+            color: #3CB815;
         }
 
         .faq-header {
