--- a/blog2.html
+++ b/blog2.html
@@ -69,12 +69,15 @@
             color: #333;
         }
 
-         .dropdown-item:focus {
+          .dropdown-item:hover{
             background-color: white;
-            /* highlight */
-            color: #000;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+            color: #3CB815;
         }
-
+        .dropdown-item:focus {
+            background-color: white;
+            color: #3CB815;
+        }
         .subtitles {
             border: none;
             border-bottom: 2px solid red;
