--- a/blog4.html
+++ b/blog4.html
@@ -69,10 +69,14 @@
             color: #333;
         }
 
+         .dropdown-item:hover{
+            background-color: white;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+            color: #3CB815;
+        }
         .dropdown-item:focus {
             background-color: white;
-            /* highlight */
-            color: #000;
+            color: #3CB815;
         }
 
         .subtitles {
