--- a/contact.html
+++ b/contact.html
@@ -65,11 +65,15 @@
         color: #333;
     }
 
-    .dropdown-item:focus {
-        background-color: white;
-        /* highlight */
-        color: #000;
-    }
+     .dropdown-item:hover{
+            background-color: white;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+            color: #3CB815;
+        }
+        .dropdown-item:focus {
+            background-color: white;
+            color: #3CB815;
+        }
 
     /* Popup Wrapper */
     .popup-wrapper {
