--- a/product.html
+++ b/product.html
@@ -72,12 +72,15 @@
             color: #333;
         }
 
-         .dropdown-item:focus {
+          .dropdown-item:hover{
             background-color: white;
-            /* highlight */
-            color: #000;
+            box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+            color: #3CB815;
         }
-
+        .dropdown-item:focus {
+            background-color: white;
+            color: #3CB815;
+        }
         /* Popup Wrapper */
         .popup-wrapper {
             border-radius: 12px;
